<resources>

    <string name="app_name">Running</string>

    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="forgotPassword">Olvidaste tu contraseña?</string>
    <string name="login">Iniciar sesión</string>
    <string name="resetPassword">Enviar Contraseña</string>
    <string name="invitation">¿Hasta qué nivel eres capaz de llegar?</string>
    <string name="acept">He leído y acepto los</string>
    <string name="terms">términos y condiciones de uso.</string>

    <string name="empty_email">Introduce un email porfaplis</string>
    <string name="invalid_email">mmm parece que el email está mal escrito</string>

    <string name="google">GOOGLE</string>
    <string name="facebook">FACEBOOK</string>

    <string name="bar_title_terms">Términos y Condiciones de Uso</string>
    <string name="terms1">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Praesent rhoncus convallis metus at pretium. Vivamus at lacinia leo. Praesent
        velit elit, suscipit sit amet pulvinar id, imperdiet ac massa. Quisque molestie
        lectus rhoncus urna tempor, ut lacinia mi tempor. Praesent volutpat, ligula eget
        lobortis cursus, mauris libero consequat ligula, nec scelerisque erat ipsum tempor justo.
        Aliquam ornare faucibus augue vel faucibus. Ut sollicitudin commodo tortor eu faucibus.
        Vestibulum lacinia ligula sed tortor auctor, vitae sollicitudin lorem dapibus. Phasellus sed tincidunt odio.</string>
    <string name="terms2">Praesent arcu nisi, auctor quis tempor id, vehicula non nulla.
        Sed a fermentum tellus, quis pharetra lorem. Fusce vehicula libero in ultricies
        varius. Suspendisse vel velit tortor. Aliquam non nisi eget lectus tempor consectetur
        sed in magna. Nullam tincidunt, nibh ut sodales suscipit, ante est luctus purus,
        sed pellentesque ipsum massa et quam. Proin sed sapien ultrices ex aliquet elementum sed et erat.
        Sed tincidunt felis sapien, a suscipit massa cursus et. Phasellus auctor tellus ac neque maximus accumsan.
        Morbi sit amet odio nec sapien pharetra elementum maximus id odio. Integer laoreet, neque id efficitur auctor,
        magna massa consequat justo, quis vehicula ipsum massa at sem. Morbi in ornare sapien, in luctus mauris. </string>
    <string name="terms3">Sed id libero auctor, lacinia lectus a, consequat nisl. Nam quis suscipit purus.
        Fusce at congue quam. Etiam congue imperdiet bibendum. Etiam at porttitor ipsum. Donec consectetur sapien in neque tempus tempus.
        Sed vulputate rutrum ultrices. Praesent in est leo. Suspendisse euismod purus id urna tempus pellentesque.
        Praesent condimentum nisl sit amet purus pulvinar sagittis. Cras purus felis, hendrerit et ornare ut, molestie id orci.
        Integer dictum consequat leo, id pretium urna tempus et. Donec nibh ante, laoreet id lorem vitae,
        vestibulum sollicitudin lorem. </string>


    <string name="facebook_app_id">317148124194158</string>
    <string name="fb_login_protocol_scheme">fb317148124194158</string>
    <string name="facebook_client_token">62f7fdd58cadd1b63fccec87f392da54</string>

    <string name="bar_title">Alegría Macarena</string>
    <string name="menu_running">Running</string>
    <string name="menu_record">Historial</string>
    <string name="menu_becamepremium">Hazte Premium</string>
    <string name="menu_clearpreferences">Reestablecer Ajustes</string>
    <string name="menu_signout">Cerrar Sesión</string>
    <string name="menu_offercourse">¿Quieres aprender a desarrollar apps? Entra aquí</string>

    <string name="level">Nivel</string>
    <string name="nav_hi">Quien mueve las piernas mueve el corazón. ¡Muévete, corazón!</string>
    <string name="user">blabla@wildrunning.com</string>


    <string name="navigation_drawer_open">Menu</string>
    <string name="navigation_drawer_close">Close</string>

    <string name="bar_title_record">Tomaquetomatá</string>

    <string name="orderby_dateZA">Fecha (Recientes primero)</string>
    <string name="orderby_durationZA">Duración (Mayores primero)</string>
    <string name="orderby_distanceZA">Distancia (Mayores primero)</string>
    <string name="orderby_avgspeedZA">Vel. Prom. (Mayores primero)</string>
    <string name="orderby_maxspeedZA">Vel. Máx. (Mayores primero)</string>

    <string name="orderby_dateAZ">Fecha (Antiguos primero)</string>
    <string name="orderby_durationAZ">Duración (Menores primero)</string>
    <string name="orderby_distanceAZ">Distancia (Menores primero)</string>
    <string name="orderby_avgspeedAZ">Vel. Prom. (Menores primero)</string>
    <string name="orderby_maxspeedAZ">Vel. Máx. (Menores primero)</string>

    <string name="start">VAVAVA</string>
    <string name="stop">TATE QUIETO</string>
    <string name="finish">Finalizar</string>
    <string name="rounds">Round 1</string>
    <string name="time_running">Running Time</string>
    <string name="time_walking">Walking Time</string>
    <string name="walking_clock">00:00</string>
    <string name="init_stop_watch_value">00:00:00</string>

    <string name="hard_volumen">Volumen de Música Cañera</string>
    <string name="soft_volumen">Volumen de Música Tranqui</string>
    <string name="notification_volumen">Volumen de Notificaciones</string>
    <string name="hard_position">00:00:00</string>
    <string name="hard_duration">01:00:00</string>
    <string name="soft_position">00:00:00</string>
    <string name="soft_duration">01:00:00</string>

    <string name="PopUpTotalRuns">Carrera: </string>
    <string name="PopUpTotalDistance">Kms acumulados: </string>
    <string name="PopUpTotalTime">Total time: </string>
    <string name="NoDataWarning">No hay datos registrados. Recuerda activar el GPS si deseas información de tu carrera</string>

    <string name="PopUpDurationTitle">DURACION</string>
    <string name="PopUpChallengeTitle">OBJETIVO</string>
    <string name="PopUpIntervalTitle">INTERVALOS</string>
    <string name="PopUpDistanceTitle">DISTANCIA</string>
    <string name="PopUpAvgSpeedTitle">VELOCIDAD PROMEDIO</string>
    <string name="PopUpMaxSpeedTitle">VELOCIDAD MÁXIMA</string>
    <string name="PopUpUnevennessTitle">DESNIVEL</string>

    <string name="textNull"></string>
    <string name="textNoData">-</string>

    <string name="alertSignOutTitle">¿Quieres cerrar sesión?</string>
    <string name="alertSignOutTDescription">Puedes volver cuando lo desees :)</string>

    <string name="medalDistanceDescription">Distancia [Record Personal]</string>
    <string name="medalAvgSpeedDescription">Vel. Máx. [Record Personal]</string>
    <string name="medalMaxSpeedDescription">Vel. Prom. [Record Personal]</string>

    <string name="alertActivationGPSTitle">Permitir acceso a ubicación</string>
    <string name="alertActivationGPSDescription">Si desea obtener datos de su carrera como la distancia recorrida y la velocidad debe activar el GPS</string>
    <string name="ignoreActivationGPS">Ignorar</string>
    <string name="aceptActivationGPS">Activar</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBrps4GkvZdaeFMIBo6D4oTHk4mFMAagyo</string>
    <string name="alertClearPreferencesTitle">¿Quieres borrar tus preferencias de carrera?</string>
    <string name="alertClearPreferencesDescription">Borraremos los ajustes de volumen y carrera (modo y tiempo de intervalos) de tu útlima carrera, vamos que tampoco pasa na</string>

    <string name="CardAvgSpeedTitle">VEL. PROM.</string>
    <string name="CardMaxSpeedTitle">VEL. MAX</string>
    <string name="CardMedalDistance">Kms. [RP]</string>
    <string name="CardMedalAvgSpeed">V.Máx. [RP]</string>
    <string name="CardMedalMaxSpeed">V.Pr. [RP]</string>

    <string name="share">COMPARTIR</string>


</resources>